5 static methods and classes

--- a/Zagreus/Zagreus.csproj
+++ b/Zagreus/Zagreus.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalculateWeaponTier.cs" />
     <Compile Include="Gods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
